--- a/reason_4.0/www/local/luther_2014/stylesheets/scss/modules/_publication.scss
+++ b/reason_4.0/www/local/luther_2014/stylesheets/scss/modules/_publication.scss
@@ -62,6 +62,10 @@
 
 		.description {
 			margin-top: rem-calc(8);
+
+			p {
+				margin-bottom: 0;
+			}
 		}
 
 		.more {
@@ -71,6 +75,7 @@
 
 	.pubLinks {
 		margin-left: 0;
+		margin-bottom: 0;
 
 		a {
 			&:before {
